Fixing NMI setting to true on PPU